Correction des problèmes de merge

--- a/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/liste_sa.html.twig
@@ -31,30 +31,30 @@
         </div>
     </div>
 
-    <div class="max-w-screen-xl w-5/6 mx-auto mt-10">
+    <div class="max-w-screen-xl mx-auto mt-10">
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                 <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
 
                 {% if choix == "Tous les SA" %}
                 <tr >
-                    <th scope="col" class="px-6 py-3">
+                    <th scope="col" class="py-3 px-6">
                         Nom
                     </th>
-                    <th scope="col" class="px-6 py-3">
+                    <th scope="col" class="py-3">
                         Salle
                     </th>
-                    <th scope="col" class="px-6 py-3">
+                    <th scope="col" class="py-3">
                         Bâtiment
                     </th>
-                    <th scope="col" class="px-6 py-3">
+                    <th scope="col" class="py-3">
+                        Etat des capteurs
+                    </th>
+                    <th scope="col" class="py-3 px-6">
                         Etat
                     </th>
                     <th scope="col" class="py-3 text-center">
                         Actions
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                        Etat des capteurs
                     </th>
                 </tr>
                 </thead>
@@ -64,21 +64,51 @@
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                             {{ systemeAcquisition.nom }}
                         </th>
-                        <td class="px-6 py-4">
+                        <td class="py-4">
                             {% if systemeAcquisition.etat == 'Installation' %}
                                 {{ attribute(listeSalleSaIntall, systemeAcquisition.id).nom|default('-') }}
                             {% else %}
                                 {{ systemeAcquisition.Salle.nom|default('-') }}
                             {% endif %}
                         </td>
-                        <td class="px-6 py-4">
+                        <td class="py-4">
                             {% if systemeAcquisition.etat == 'Installation' %}
                                 {{ attribute(listeSalleSaIntall, systemeAcquisition.id).Batiment|default('-') }}
                             {% else %}
                                 {{ systemeAcquisition.Salle.Batiment|default('-') }}
                             {% endif %}
                         </td>
-                        <td class="px-6 py-4">
+                        <td id="etat-capteur" class="py-4 flex flex-row justify-center w-max text-center">
+                            {% if attribute(listeEtatCapteurs, systemeAcquisition.id) is null %}
+                                <p class="my-auto">Non concerné</p>
+                            {% else %}
+                                <div class="flex flex-row">
+                                    <p class="my-auto text-center">Température : </p>
+                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "temp") == false %}
+                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
+                                    {% else %}
+                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
+                                    {% endif %}
+                                </div>
+                                <div class="flex flex-row mx-2">
+                                    <p class="my-auto text-center">Humidité : </p>
+                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "hum") == false %}
+                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
+                                    {% else %}
+                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
+                                    {% endif %}
+                                </div>
+                                <div class="flex flex-row text-center">
+                                    <p class="my-auto">Co2 : </p>
+                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "co2") == false %}
+                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
+                                    {% else %}
+                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
+                                    {% endif %}
+                                </div>
+                            {% endif %}
+                        </td>
+                        <td class="py-4">
                             {% if systemeAcquisition.etat == 'Installation' %}
                                 <div class="p-1 bg-amber-500 text-white rounded-lg flex flex-row justify-evenly items-center">
                                     <span>Installation</span>
@@ -106,36 +136,6 @@
                                 Supprimer le SA
                                 <div class="tooltip-arrow" data-popper-arrow></div>
                             </div>
-                        </td>
-                        <td id="etat-capteur" class="px-6 py-4 flex flex-row w-max">
-                            {% if attribute(listeEtatCapteurs, systemeAcquisition.id) is null %}
-                            <p class="my-auto">Non concerné</p>
-                            {% else %}
-                                <div class="flex flex-row">
-                                    <p class="my-auto">Température : </p>
-                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "temp") == false %}
-                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
-                                    {% else %}
-                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
-                                    {% endif %}
-                                </div>
-                                <div class="flex flex-row mx-2">
-                                    <p class="my-auto">Humidité : </p>
-                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "hum") == false %}
-                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
-                                    {% else %}
-                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
-                                    {% endif %}
-                                </div>
-                                <div class="flex flex-row">
-                                    <p class="my-auto">Co2 : </p>
-                                    {% if attribute(attribute(listeEtatCapteurs, systemeAcquisition.id), "co2") == false %}
-                                        <box-icon name='x' color='#ff1d1d' class="my-auto mx-auto"></box-icon>
-                                    {% else %}
-                                        <box-icon name='check' color='#05d409' class="my-auto mx-auto" ></box-icon>
-                                    {% endif %}
-                                </div>
-                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
