--- a/webapp/sfapp/templates/public/releves.html.twig
+++ b/webapp/sfapp/templates/public/releves.html.twig
@@ -42,10 +42,12 @@
                 </select>
             {{ form_end(form) }}
         </div>
-        <div>
-            <a href="/signaler-erreur/{{ form_selected.id }}" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-full">
-                Signaler une erreur</a>
-        </div>
+        {% if form_selected is defined and form_selected is not null %}
+            <div>
+                <a href="/signaler-erreur/{{ form_selected.id }}" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-full">
+                    Signaler une erreur</a>
+            </div>
+        {% endif %}
     </div>
     <div class="w-2/3 mx-auto my-12">
         {% if temp_dates is defined and temp_dates is not null and temp_releves is defined and temp_releves is not null %}
@@ -406,7 +408,7 @@
                                 name: "Qualité de l'air",
                                 data: [{% for val in co2_releves %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}],
                                 color: "#1A56DB",
-                            },
+                            %},
                         ],
                         xaxis: {
                             categories: [
