--- a/webapp/sfapp/templates/public/releves.html.twig
+++ b/webapp/sfapp/templates/public/releves.html.twig
@@ -43,8 +43,8 @@
             {{ form_end(form) }}
         </div>
         {% if form_selected is defined and form_selected is not null %}
-            <div>
-                <a href="/signaler-erreur/{{ form_selected.id }}" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-full">
+            <div class="my-auto">
+                <a href="/signaler-erreur/{{ form_selected.id }}" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-lg">
                     Signaler une erreur</a>
             </div>
         {% endif %}
