--- a/sa-software/software/data/main.css
+++ b/sa-software/software/data/main.css
@@ -96,7 +96,7 @@ form > div > div
     margin: 25px auto;
 }
 
-form > input, form > div > div > select {
+form > input, form > div > input, form > div > div > select {
     margin: 10px;
     padding: 5px;
     border-radius: 5px;
@@ -115,4 +115,18 @@ form > input[type="submit"] {
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.hidden{
+    display: none;
+}
+
+.visible{
+    display: flex;
+}
+
+#div_id_nom_util{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
