--- a/webapp/sfapp/templates/public/accueil.html.twig
+++ b/webapp/sfapp/templates/public/accueil.html.twig
@@ -15,7 +15,7 @@
                 </div>
                 <h2 class="w-64 text-center mt-5 text-xl">Relevés</h2>
             </a>
-            <a href="/plan" id="infra">
+            <a href="/plan/lister-salles" id="infra">
                 <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
                     <box-icon name='buildings' type='solid' class="w-1/3 h-1/3"></box-icon>
                 </div>
@@ -92,7 +92,7 @@
                 </div>
                 <h2 class="w-64 text-center mt-5 text-xl">Relevés</h2>
             </a>
-            <a href="/plan" id="infra">
+            <a href="/connexion" id="infra">
                 <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
                     <box-icon name='log-in' type='solid' class="w-1/3 h-1/3"></box-icon>
                 </div>
