Ajout des fils d'ariane et des titres de pages partout

--- a/webapp/sfapp/templates/public/signaler_erreur.html.twig
+++ b/webapp/sfapp/templates/public/signaler_erreur.html.twig
@@ -28,7 +28,7 @@
     </div>
 
     <div class="w-2/3 mx-auto">
-    <h1 class="text-3xl font-bold text-center mb-12">Signaler une erreur pour la salle <i>{{ salle.Nom }}</i></h1>
+        <h1 class="text-4xl pb-12 text-center">Signaler une erreur pour la salle <i>{{ salle.Nom }}</i></h1>
 
     <div class="mx-auto mt-4 w-2/3">
         {{ form_start(form) }}
