--- a/webapp/sfapp/templates/public/releves.html.twig
+++ b/webapp/sfapp/templates/public/releves.html.twig
@@ -26,6 +26,7 @@
             </ol>
         </nav>
     </div>
+    <h1 class="text-4xl pb-12 text-center">Relevés</h1>
     <div class="w-2/3 mx-auto flex justify-between">
         <div>
             <h1>Veuillez choisir une salle</h1>
