Ajout de la récupération des données météo

--- a/webapp/sfapp/templates/public/releves.html.twig
+++ b/webapp/sfapp/templates/public/releves.html.twig
@@ -73,12 +73,12 @@
                     </div>
                     {% if temp_diff > 0 %}
                         <div class="flex items-center px-2.5 py-0.5 text-base font-semibold text-green-500 dark:text-green-400 text-center">
-                            + {{ temp_diff }} °C
+                            + {{ temp_diff | number_format(2) }} °C
                             <box-icon name='up-arrow-alt' color="#16a34a"></box-icon>
                         </div>
                     {% elseif temp_diff < 0 %}
                         <div class="flex items-center px-2.5 py-0.5 text-base font-semibold text-red-500 dark:text-red-400 text-center">
-                            {{ temp_diff }} °C
+                            {{ temp_diff | number_format(2) }} °C
                             <box-icon name='down-arrow-alt' color="#ef4444"></box-icon>
                         </div>
                     {% else %}
@@ -87,14 +87,13 @@
                         </div>
                     {% endif %}
                 </div>
-                <div id="data-labels-chart"></div>
+                <div id="temps-labels-chart"></div>
             </div>
 
             <script>
                 // ApexCharts options and config
                 window.addEventListener("load", function() {
                     let options = {
-                        // enable and customize data labels using the following example, learn more from here: https://apexcharts.com/docs/datalabels/
                         dataLabels: {
                             enabled: false,
                         },
@@ -112,6 +111,11 @@
                                 name: "Températures locales",
                                 data: [{% for val in temp_releves %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}],
                                 color: "#1A56DB",
+                            },
+                            {
+                                name: "Températures extérieures",
+                                data: [{% for val in temp_env %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}],
+                                color: "#7F8C8D",
                             }
                         ],
                         chart: {
@@ -123,7 +127,7 @@
                                 enabled: false,
                             },
                             toolbar: {
-                                show: false,
+                                show: true,
                             },
                         },
                         tooltip: {
@@ -171,8 +175,8 @@
                         },
                     }
 
-                    if (document.getElementById("data-labels-chart") && typeof ApexCharts !== 'undefined') {
-                        const chart = new ApexCharts(document.getElementById("data-labels-chart"), options);
+                    if (document.getElementById("temps-labels-chart") && typeof ApexCharts !== 'undefined') {
+                        const chart = new ApexCharts(document.getElementById("temps-labels-chart"), options);
                         chart.render();
                     }
                 });
@@ -184,7 +188,7 @@
         {% endif %}
         {% if hum_dates is defined and hum_dates is not null and hum_releves is defined and hum_releves is not null %}
             <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 my-6">
-                <div class="flex justify-between">
+                <div class="flex justify-between mb-5">
                     <div>
                         <h5 class="leading-none text-3xl font-bold text-gray-900 dark:text-white pb-2">Humidité</h5>
                         <p class="text-base font-normal text-gray-500 dark:text-gray-400">en %</p>
@@ -205,12 +209,12 @@
                     </div>
                     {% if hum_diff > 0 %}
                         <div class="flex items-center px-2.5 py-0.5 text-base font-semibold text-red-500 dark:text-red-400 text-center">
-                            + {{ hum_diff }} %
+                            + {{ hum_diff | number_format(2)}} %
                             <box-icon name='up-arrow-alt' color="#ef4444"></box-icon>
                         </div>
                     {% elseif hum_diff < 0 %}
                         <div class="flex items-center px-2.5 py-0.5 text-base font-semibold text-green-500 dark:text-green-400 text-center">
-                            {{ hum_diff }} %
+                            {{ hum_diff | number_format(2)}} %
                             <box-icon name='down-arrow-alt' color="#16a34a"></box-icon>
                         </div>
                     {% else %}
@@ -219,12 +223,37 @@
                         </div>
                     {% endif %}
                 </div>
-                <div id="hum-chart"></div>
+                <br>
+                <div id="hum-labels-chart" class="my-3"></div>
             </div>
             <script>
                 // ApexCharts options and config
                 window.addEventListener("load", function() {
                     let options = {
+                        dataLabels: {
+                            enabled: false,
+                        },
+                        grid: {
+                            show: false,
+                            strokeDashArray: 4,
+                            padding: {
+                                left: 16,
+                                right: 16,
+                                top: -26
+                            },
+                        },
+                        series: [
+                            {
+                                name: "Humidité locale",
+                                data: [{% for val in hum_releves %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}],
+                                color: "#1A56DB",
+                            },
+                            {
+                                name: "Humidité extérieure",
+                                data: [{% for val in hum_env %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}],
+                                color: "#7F8C8D",
+                            }
+                        ],
                         chart: {
                             height: "100%",
                             maxWidth: "100%",
@@ -234,7 +263,7 @@
                                 enabled: false,
                             },
                             toolbar: {
-                                show: false,
+                                show: true,
                             },
                         },
                         tooltip: {
@@ -242,6 +271,9 @@
                             x: {
                                 show: false,
                             },
+                        },
+                        legend: {
+                            show: true
                         },
                         fill: {
                             type: "gradient",
@@ -252,31 +284,12 @@
                                 gradientToColors: ["#1C64F2"],
                             },
                         },
-                        dataLabels: {
-                            enabled: false,
-                        },
                         stroke: {
-                            width: 6,
+                            width: 5,
                         },
-                        grid: {
-                            show: false,
-                            strokeDashArray: 4,
-                            padding: {
-                                left: 2,
-                                right: 2,
-                                top: 0
-                            },
-                        },
-                        series: [
-                            {
-                                name: "Humidité",
-                                data: [{% for val in hum_releves %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}],
-                                color: "#1A56DB",
-                            },
-                        ],
                         xaxis: {
                             categories: [
-                                {% for val in hum_dates %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}
+                                {% for val in hum_dates %}"{{ val | format_datetime('full', 'short', locale='fr') | title }}"{% if loop.last == false %},{% endif %}{% endfor %}
                             ],
                             labels: {
                                 show: false,
@@ -290,16 +303,21 @@
                         },
                         yaxis: {
                             show: false,
+                            labels: {
+                                formatter: function (value) {
+                                    return value + ' %';
+                                }
+                            }
                         },
                     }
 
-                    if (document.getElementById("hum-chart") && typeof ApexCharts !== 'undefined') {
-                        const chart = new ApexCharts(document.getElementById("hum-chart"), options);
+                    if (document.getElementById("hum-labels-chart") && typeof ApexCharts !== 'undefined') {
+                        const chart = new ApexCharts(document.getElementById("hum-labels-chart"), options);
                         chart.render();
                     }
                 });
             </script>
-        {% elseif hum_error is defined %}
+            {% elseif hum_error is defined %}
             <div class="bg-red-300 rounded-lg text-red-950 text-xl w-full text-center my-12 p-6">
                 {{ hum_error }}
             </div>
@@ -333,12 +351,12 @@
                     </div>
                     {% if co2_diff > 0 %}
                         <div class="flex items-center px-2.5 py-0.5 text-base font-semibold text-red-500 dark:text-red-400 text-center">
-                            + {{ co2_diff }} ppm
+                            + {{ co2_diff | number_format(2) }} ppm
                             <box-icon name='up-arrow-alt' color="#ef4444"></box-icon>
                         </div>
                     {% elseif co2_diff < 0 %}
                         <div class="flex items-center px-2.5 py-0.5 text-base font-semibold text-green-500 dark:text-green-400 text-center">
-                            {{ co2_diff }} ppm
+                            {{ co2_diff | number_format(2) }} ppm
                             <box-icon name='down-arrow-alt' color="#16a34a"></box-icon>
                         </div>
                     {% else %}
@@ -362,7 +380,7 @@
                                 enabled: false,
                             },
                             toolbar: {
-                                show: false,
+                                show: true,
                             },
                         },
                         tooltip: {
@@ -404,7 +422,7 @@
                         ],
                         xaxis: {
                             categories: [
-                                {% for val in co2_dates %}"{{ val }}"{% if loop.last == false %},{% endif %}{% endfor %}
+                                {% for val in co2_dates %}"{{ val | format_datetime('full', 'short', locale='fr') | title }}"{% if loop.last == false %},{% endif %}{% endfor %}
                             ],
                             labels: {
                                 show: false,
@@ -418,6 +436,11 @@
                         },
                         yaxis: {
                             show: false,
+                            labels: {
+                                formatter: function (value) {
+                                    return value + ' ppm';
+                                }
+                            }
                         },
                     }
 
