--- a/webapp/sfapp/templates/plan/technicien/ajouter_sa.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/ajouter_sa.html.twig
@@ -52,7 +52,7 @@
             {% if errorBaseDonnees %}
                 <p class="text-red-600 text-sm mt-1">{{ errorBaseDonnees }}</p>
             {% endif %}
-            {{ form_widget(form.save, { 'label': 'Ajouter le système',  'attr': {'class': 'cursor-not-allowed rounded-lg bg-[#0f6eb1] text-white py-3 self-center mt-6 px-10', 'id': 'submit'}  })  }}
+            {{ form_widget(form.save, { 'label': 'Ajouter le système',  'attr': {'class': 'cursor-not-allowed font-bold text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 mt-5 py-2.5 focus:outline-none', 'id': 'submit'}  })  }}
 
         </div>
         {{ form_end(form) }}
