--- a/webapp/sfapp/templates/plan/technicien/demande_de_travaux.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/demande_de_travaux.html.twig
@@ -30,7 +30,7 @@
     <div class="relative overflow-x-auto lg:max-w-7xl mx-auto">
         <h1 class="text-4xl pb-12 text-center">Demande de travaux en salle {{ salle.nom }}</h1>
         <div class="flex flex-row justify-between max-w-screen-xl mx-auto">
-            <div class="ml-6">
+            <div>
                 {{ form_start(formSystemeAcqui) }}
                     <label class="mb-2">{{ field_label(formSystemeAcqui.sa) }}</label>
                     <select name="{{ field_name(formSystemeAcqui.sa) }}" id="selectSa" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" onchange='this.form.submit()'>
@@ -45,7 +45,7 @@
                 {% if listeReleves is not null and not demandeTravaux.Terminee %}
                     <button
                         type="button"
-                        class="font-bold ml-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mt-7 focus:outline-none"
+                        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
                         onclick="window.location.href='/plan/{{ demandeTravaux.getId }}/declarer-operationnel'"
                     >
                         Déclarer opérationnel
