--- a/webapp/sfapp/templates/public/releves.html.twig
+++ b/webapp/sfapp/templates/public/releves.html.twig
@@ -45,7 +45,7 @@
         </div>
         {% if form_selected is defined and form_selected is not null %}
             <div class="my-auto">
-                <a href="/signaler-erreur/{{ form_selected.id }}" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-lg">
+                <a href="/signaler-erreur/{{ form_selected.id }}" class="text-white bg-red-500 hover:bg-red-600 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">
                     Signaler une erreur</a>
             </div>
         {% endif %}
